@@ -1,5 +1,3 @@
 ## Process this file with automake to create Makefile.in
 
-AUTOMAKE_OPTIONS = 1.4 gnu
-
 noinst_HEADERS = gelfx.h
