@@ -1,3 +1,9 @@
+2016-03-10  Mark Hatle <mark.hatle@windriver.com>
+	* configure.ac, m4/libelf.m4, doc/Makefile.am, gelf/Makefile.am,
+	  gelfx/Makefile.am, gelfx32/Makefile.am, patches/Makefile.am,
+	  src/Makefile.am, src/rtld/Makefile.am, testsuite/Makefile.am:
+		Update to avoid autoconf/automake warnings
+
 2015-10-29  Mark Hatle <mark.hatle@windriver.com>
 	    Kyle McMartin  <kmcmartin@redhat.com>
 	    Jakub Jelinek  <jakub@redhat.com>
